# vllm-hpu-extension

./: pyproject.toml
benchmarks/: backend_request_func.py
calibration/: calibrate_model.sh  step-4-quantize-scales.py
requirements/: hpu.txt
tests/v1/kv_connector/nixl_integration/: run_accuracy_test.sh  run_benchmark_test.sh  toy_proxy_server.py
vllm/: envs.py
vllm/attention/backends/: hpu_attn.py
vllm/distributed/kv_transfer/kv_connector/v1/: nixl_connector.py
vllm/engine/: async_llm_engine.py
vllm/entrypoints/openai/: api_server.py  serving_completion.py
vllm/model_executor/: sampling_metadata.py
vllm/model_executor/layers/: sampler.py
vllm/model_executor/models/: llama.py
vllm/v1/engine/: async_llm.py  core.py
vllm/v1/worker/: hpu_model_runner.py
vllm_hpu_extension/: bucketing.py  environment.py  ops.py  profiler.py  utils.py
vllm_hpu_extension/bucketing/: common.py  exponential.py  linear.py
